fix broken layout on chrome.

--- a/docs/theme/css/main.css
+++ b/docs/theme/css/main.css
@@ -116,10 +116,10 @@ thead {
     color: #000000;
     float: left;
     clear: both;
-    width: 130px;
+    width: 144px;
     font-size: 1.5em;
     line-height: 1em;
-    margin: 0 20px 1em 0;
+    margin: 0 6px 1em 0;
 }
 
 .info {
